--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -12,7 +12,7 @@ $darkGray: rgb(117, 115, 115);
     display: flex;
     justify-content: center;
     .container {
-        width: 1024px;
+        max-width: 1024px;
 
         .link {
             text-decoration: none;
